fix contrast errors

--- a/src/app/activity-page-view/activity-page-view.component.css
+++ b/src/app/activity-page-view/activity-page-view.component.css
@@ -83,7 +83,7 @@ h2 {
 }
 
 .event-metadata span {
-  color: hsl(211, 25%, 53%);
+  color: hsl(211, 25%, 35%);
 }
 
 img {
